--- a/front/src/styles/_mixins.scss
+++ b/front/src/styles/_mixins.scss
@@ -125,7 +125,12 @@
 @mixin line-clamp($lines: 3) {
   display: -webkit-box;
   -webkit-line-clamp: $lines;
-  line-clamp: $lines;
-  -webkit-box-orient: vertical;
+  line-clamp: $lines;   
+  /* autoprefixer: ignore next */
+  -webkit-box-orient: vertical;  
   overflow: hidden;
+  text-overflow: ellipsis;  
+  // Sécurités supplémentaires pour forcer le wrap
+  word-break: break-word; 
+  overflow-wrap: break-word;
 }
